fixed search button and query white space

--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -59,15 +59,15 @@
   // float: right;
 }
 
-.psuedo-near::before {
-  content: "";
-  position: absolute;
-  top: 8px;
-  right: 0;
-  bottom: 8px;
-  width: 1px;
-  background: #ccc;
-}
+// .psuedo-near::before {
+//   content: "";
+//   position: absolute;
+//   top: 8px;
+//   right: 0;
+//   bottom: 8px;
+//   width: 1px;
+//   background: #ccc;
+// }
 
 .psuedo-find{
   width: 100%;
